Fix footer text colors for better visibility

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -730,7 +730,7 @@ h6 strong,
     font-family: var(--vId-font-token-a);
     font-size: 30px;
     font-weight: 400;
-    color: var(--vId-color-token-a);
+    color: #ffffff;
     line-height: 40px;
     padding: 0px 0px 1px;
     text-align: left;
@@ -1048,7 +1048,7 @@ h6 strong,
 
 .home-e-18 {
     padding: 10px 42px 10px 42px;
-    background-color: var(--vId-color-token-b);
+    background-color: #1e293b;
     box-shadow: 0px 2px 27px 0px #0000004c;
     border-radius: 3px 3px 3px 3px;
     border-width: 0px 0px 0px 0px;
@@ -5737,7 +5737,7 @@ h6 strong,
     font-family: var(--vId-font-token-a);
     font-size: 14px;
     font-weight: 400;
-    color: #ffffffff;
+    color: #e2e8f0;
     line-height: 24px;
     padding: 0px 0px 0px 0px;
     opacity: 100%;
@@ -5770,7 +5770,7 @@ h6 strong,
     font-family: var(--vId-font-token-a);
     font-size: 22px;
     font-weight: 400;
-    color: #ffffffff;
+    color: #ffffff;
     line-height: 32px;
     padding: 0px 0px 0px 0px;
     opacity: 100%;
@@ -5803,7 +5803,7 @@ h6 strong,
     font-family: var(--vId-font-token-a);
     font-size: 14px;
     font-weight: 400;
-    color: #ffffffff;
+    color: #60a5fa;
     line-height: 24px;
     padding: 0px 0px 0px 0px;
     opacity: 100%;
@@ -5822,7 +5822,7 @@ h6 strong,
     font-family: var(--vId-font-token-a);
     font-size: 14px;
     font-weight: 400;
-    color: #ffffffff;
+    color: #60a5fa;
     line-height: 24px;
     padding: 0px 0px 0px 0px;
     opacity: 100%;
@@ -5841,7 +5841,7 @@ h6 strong,
     font-family: var(--vId-font-token-a);
     font-size: 14px;
     font-weight: 400;
-    color: #ffffffff;
+    color: #60a5fa;
     line-height: 24px;
     padding: 0px 0px 0px 0px;
     opacity: 100%;
@@ -5874,7 +5874,7 @@ h6 strong,
     font-family: var(--vId-font-token-a);
     font-size: 22px;
     font-weight: 400;
-    color: #ffffffff;
+    color: #ffffff;
     line-height: 32px;
     padding: 0px 0px 0px 0px;
     opacity: 100%;
@@ -5967,7 +5967,7 @@ h6 strong,
     font-family: var(--vId-font-token-a);
     font-size: 14px;
     font-weight: 400;
-    color: #ffffffff;
+    color: #e2e8f0;
     line-height: 24px;
     padding: 0px 0px 0px 0px;
     opacity: 100%;
@@ -6046,7 +6046,7 @@ h6 strong,
     font-family: var(--vId-font-token-a);
     font-size: 14px;
     font-weight: 400;
-    color: #ffffffff;
+    color: #e2e8f0;
     line-height: 24px;
     padding: 0px 0px 0px 0px;
     opacity: 100%;
@@ -6065,7 +6065,7 @@ h6 strong,
     font-family: var(--vId-font-token-a);
     font-size: 14px;
     font-weight: 400;
-    color: #ffffffff;
+    color: #e2e8f0;
     line-height: 24px;
     padding: 0px 0px 0px 0px;
     opacity: 100%;
@@ -6144,7 +6144,7 @@ h6 strong,
     font-family: var(--vId-font-token-a);
     font-size: 14px;
     font-weight: 400;
-    color: #ffffffff;
+    color: #e2e8f0;
     line-height: 24px;
     padding: 0px 0px 0px 0px;
     opacity: 100%;
@@ -6163,7 +6163,7 @@ h6 strong,
     font-family: var(--vId-font-token-a);
     font-size: 14px;
     font-weight: 400;
-    color: #ffffffff;
+    color: #e2e8f0;
     line-height: 24px;
     padding: 0px 0px 0px 0px;
     opacity: 100%;
@@ -6306,7 +6306,7 @@ h6 strong,
     font-family: Lato;
     font-size: 14px;
     font-weight: 400;
-    color: #ffffffff;
+    color: #94a3b8;
     line-height: 24px;
     padding: 50px 0px 0px 0px;
     opacity: 100%;
